tests/bad_dataflow_3.out
STDOUT:

STDERR:
CFG lowering error in function main: MalformedPhiInfo(MalformedPhiInfo { infos: [SingleMalformedPhiInfo { bb_id: bb3, phi_dest: ValueRef(4, 29..30, Some(VarId(0)), None), phi_var_id: Some(VarId(0)), sources: {bb1: Value(ValueRef(2, 54..59, Some(VarId(0)), None))}, missing_sources: {bb2} }], malformed_assignments: [SingleMalformedAssignmentInfo { bb_id: bb3, dest_val: ValueRef(3, 91..92, Some(VarId(0)), None), assigned_val: Value(ValueRef(4, 29..30, Some(VarId(0)), None)), missing_sources: {} }], phi_assignments: [], malformed_tails: [SingleMalformedTailInfo { bb_id: bb3, missing_sources: {} }], blocks: [BasicBlock { id: bb0, phi: [], instructions: [Assign { dest: ValueRef(0, 41..42, None, None), val: Const(1) }], tail: CondBranch { cond: ValueRef(0, 41..42, None, None), then_bb: bb1, else_bb: bb2 }, successors: [bb1, bb2], predecessors: [] }, BasicBlock { id: bb1, phi: [], instructions: [Assign { dest: ValueRef(1, 58..59, None, None), val: Const(5) }, Assign { dest: ValueRef(2, 54..59, Some(VarId(0)), None), val: Value(ValueRef(1, 58..59, None, None)) }], tail: UncondBranch { target: bb3 }, successors: [bb3], predecessors: [bb0] }, BasicBlock { id: bb2, phi: [], instructions: [], tail: UncondBranch { target: bb3 }, successors: [bb3], predecessors: [bb0] }, BasicBlock { id: bb3, phi: [PhiCfgInstruction { dest: ValueRef(4, 29..30, Some(VarId(0)), None), sources: {bb1: Value(ValueRef(2, 54..59, Some(VarId(0)), None))}, var_id: Some(VarId(0)), phi_type: Infer }], instructions: [Assign { dest: ValueRef(3, 91..92, Some(VarId(0)), None), val: Value(ValueRef(4, 29..30, Some(VarId(0)), None)) }], tail: Return { value: Some(ValueRef(3, 91..92, Some(VarId(0)), None)) }, successors: [], predecessors: [bb1, bb2] }] })
error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow_3.c:10:12
   │
 3 │     int x;
   │         - Variable declaration site
   ·
10 │     return x;
   │            ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

---
digraph MalformedPhiInfo {
  node [shape=box, fontname="Courier New", fontsize=10];
  edge [fontname="Courier New", fontsize=9];
  bb0 [label="bb0:\n    %0 = const.i64 1\n    br_cond %0 ? bb1 : bb2\n"];
  bb1 [label="bb1:\n    %1 = const.i64 5\n    %2 = %1 (x)\n    br bb3\n"];
  bb2 [label="bb2:\n    br bb3\n"];
  bb3 [label="bb3:\n    %4 = Φ(%2@bb1 [malformed: missing from BBs [bb2]]) (x)\n    %3 = %4 [malformed: missing from BBs []] (x)\n    return %3\n"];
  bb0 -> bb1 [color=green];
  bb0 -> bb2 [color=red];
  bb1 -> bb3;
  bb2 -> bb3 [label="missing vars: x",fontcolor=red];
}

Error: CFG lowering failed
